k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bussie-web
  namespace: bussie-web-ns
  labels:
    app: bussie-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bussie-web
  template:
    metadata:
      labels:
        app: bussie-web
    spec:
      containers:
      - name: bussie-web
        image: kaijehenstra/bussie
        imagePullPolicy: Always
        ports:
        - containerPort: 80
