k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bussie-webingress
spec:
  tls:
  - hosts:
    - doemijmaareenbussiewaareenautoachteropkan.nl
    secretName: bussie-webtls
  rules:
  - host: doemijmaareenbussiewaareenautoachteropkan.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bussie-webservice
            port:
              number: 80
